Fixed footer sizing Fixed wrap for json

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -18,11 +18,11 @@
 }
 
 .author-container:not(:last-child) {
-    margin-right: 1em;
+    margin-right: 1.5em;
 }
 
 .footer .icon {
-    margin-left: 1em;
+    margin-left: 0.5em;
 }
 
 .footer a {
